<resources>
    <string name="app_name">Crop Prediction</string>
    <string name="crop_placeholder">Crop</string>
    <string name="crop_image_desc">Illustration of the recommended crop</string>
    <string name="organic_fertilizer_icon_desc">Organic fertilizer</string>
    <string name="chemical_fertilizer_icon_desc">Chemical fertilizer</string>
    <string name="organic_pesticide_icon_desc">Organic pesticide</string>
    <string name="chemical_pesticide_icon_desc">Chemical pesticide</string>
    <string name="label_organic_fertilizer">Organic fertilizer</string>
    <string name="label_chemical_fertilizer">Chemical fertilizer</string>
    <string name="label_organic_pesticide">Organic pesticide</string>
    <string name="label_chemical_pesticide">Chemical pesticide</string>
    <string name="read_aloud">🔊 Read aloud</string>
</resources>